2005-03-23  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate-private.h:
	* src/cairo-path-fixed-private.h:
	* src/cairo-private.h:
	* src/cairoint.h: Begin the process of breaking up cairoint.h,
	moving structure definitions of cairo_t, cairo_gstate_t, and
	cairo_path_real_t into their own header files.

	* src/cairo.c:
	* src/cairo_gstate.c:
	* src/cairo_path.c:
	* src/cairo_path_fill.c:
	* src/cairo_path_stroke.c:
	* src/cairo_pen.c: Track changes to header files, reaching into
	the new private headers where necessary.

2005-03-23  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: (cairo_set_target_glitz), (cairo_set_target_pdf),
	(cairo_set_target_pdf_as_file), (cairo_set_target_png),
	(cairo_set_target_ps), (cairo_set_target_win32),
	(cairo_set_target_xcb), (cairo_set_target_drawable): Move
	surface-specific cairo_t functions to cairo.c.

	* src/cairo_glitz_surface.c:
	* src/cairo_pdf_surface.c:
	* src/cairo_png_surface.c:
	* src/cairo_ps_surface.c:
	* src/cairo_win32_surface.c:
	* src/cairo_xcb_surface.c:
	* src/cairo_xlib_surface.c: Remove functions that have now moved
	to cairo.c.

	* test/.cvsignore: A few new files to ignore now with new
	compilation mode using a libtool helper library.

2005-03-23  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Add backwards-compatibility for recently renamed
	functions.

2005-03-21  Carl Worth  <cworth@cworth.org>

	* src/cairo.c:
	* src/cairo_gstate.c: (_cairo_gstate_transform),
	(_cairo_gstate_user_to_device),
	(_cairo_gstate_user_to_device_distance),
	(_cairo_gstate_device_to_user),
	(_cairo_gstate_device_to_user_distance),
	(_cairo_gstate_reset_clip):
	* src/cairo_matrix.c:
	* src/cairoint.h:
	* src/cairo.h: Rename functions to eliminate abbreviations:
	cairo_concat_matrix		-> cairo_transform
	cairo_transform_point		-> cairo_user_to_device
	cairo_transform_distance	-> cairo_user_to_device_distance
	cairo_inverse_transform_point	-> cairo_device_to_user